--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,3 @@
-# GitHub Actions workflow for auto-publishing a React Native package with Yarn PnP
 name: Publish Package
 
 on:
@@ -14,8 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetch all history for git operations
-          token: ${{ secrets.GH_TOKEN }} # Use a PAT for push access
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
 
       # Set up Node.js
       - name: Set up Node.js
@@ -32,6 +31,7 @@ jobs:
           yarn config set nodeLinker pnp
           yarn config set pnpMode strict
           yarn config set enableStrictSsl true
+          yarn config set npmAuthToken ${{ secrets.NPM_TOKEN }} # Set NPM token for Yarn
 
       # Cache Yarn dependencies
       - name: Cache Yarn dependencies
@@ -66,7 +66,7 @@ jobs:
       - name: Bump version
         run: |
           echo "Current version: $(node -p "require('./package.json').version")"
-          node -e "const fs = require('fs'); const pkg = require('./package.json'); const [major, minor, patch] = pkg.version.split('.').map(Number); pkg.version = \`\${major}.\${minor}.\${patch + 1}\`; fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
+          node -e "const fs = require('fs'); const pkg = require('./package.json'); const [major, minor, patch] = pkg.version.split('.').map(Number); pkg.version = \`${major}.${minor}.${patch + 1}\`; fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
           git add package.json
           git commit -m "chore: bump patch version [skip ci]" || echo "No changes to commit"
           git push origin main
@@ -75,7 +75,7 @@ jobs:
           git tag v${NEW_VERSION}
           git push origin v${NEW_VERSION}
         env:
-          NODE_OPTIONS: --require ./.pnp.cjs # Ensure Yarn PnP is loaded for Node.js
+          NODE_OPTIONS: --require ./.pnp.cjs
 
       # Publish to npm
       - name: Publish to npm
