--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,11 +82,14 @@ jobs:
         run: |
           echo "NPM_TOKEN is set: ${{ secrets.NPM_TOKEN != '' }}"
           npm whoami
+          yarn config get npmAuthToken
+          echo "Package name: $(node -p "require('./package.json').name")"
+          echo "Package version: $(node -p "require('./package.json').version")"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       # Publish to npm
       - name: Publish to npm
-        run: yarn npm publish --access public --verbose
+        run: yarn npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
