--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shayrn/react-native-scaler",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "Responsive scaling utilities for React Native CLI and Expo apps",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -62,5 +62,6 @@
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "test": "jest"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
